<resources>

    <string name="app_name">my-solo-life</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- 스플래시, 앱 바 -->
    <string name="title">자취준생</string>
    <string name="logo">로고</string>
    <string name="setting">설정</string>
    <string name="logout">로그아웃</string>
    <string name="back">뒤로가기</string>

    <!-- 인트로 -->
    <string name="intro">계속하기</string>
    <string name="login">이메일 로그인</string>
    <string name="join">회원 가입하기</string>
    <string name="guest">비회원 로그인</string>

    <!-- 로그인, 회원 가입 -->
    <string name="email">이메일</string>
    <string name="pw">비밀번호</string>
    <string name="pw2">비밀번호 확인</string>

    <!-- 내비게이션 바 -->
    <string name="home">홈</string>
    <string name="blog">블로그</string>
    <string name="board">게시판</string>
    <string name="bookmark">북마크</string>
    <string name="web">웹</string>

    <!-- 블로그 -->
    <string name="category">카테고리</string>
    <string name="android">안드로이드스튜디오</string>
    <string name="kotlin">코틀린문법</string>
    <string name="error">오류/경고</string>
    <string name="vcs">깃허브</string>
    <string name="etc">기타</string>
    <string name="post">게시글</string>

    <!-- 게시판 -->
    <string name="write">글쓰기</string>
    <string name="read">보기</string>
    <string name="boardTitle">제목</string>
    <string name="boardMain">내용</string>
    <string name="boardTime">시간</string>
    <string name="picture">사진 첨부</string>
    <string name="myPost">내가 쓴 글</string>
    <string name="my">내 글</string>
    <string name="edit">수정하기</string>
    <string name="delete">삭제하기</string>

    <!-- 댓글 -->
    <string name="comment">댓글</string>
    <string name="myComment">내 댓글</string>
    <string name="zero">0</string>
    <string name="close">종료</string>

</resources>