<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.BoardFragment">

        <!-- 게시글 목록(리스트뷰) -->
        <ListView
            android:id="@+id/boardLV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="60dp"/>

    <!-- 내비게이션 바 -->
    <LinearLayout
        android:id="@+id/navBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/appbar"
        android:orientation="horizontal"
        android:weightSum="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/homeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:gravity="center"
            android:text="@string/home"
            android:textSize="16sp"
            app:drawableTopCompat="@drawable/home28w" />

        <TextView
            android:id="@+id/blogBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:gravity="center"
            android:text="@string/blog"
            android:textSize="16sp"
            app:drawableTopCompat="@drawable/blog28w" />

        <TextView
            android:id="@+id/boardBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:gravity="center"
            android:text="@string/board"
            android:textSize="16sp"
            app:drawableTopCompat="@drawable/board28" />

        <TextView
            android:id="@+id/bookmarkBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:gravity="center"
            android:text="@string/bookmark"
            android:textSize="16sp"
            app:drawableTopCompat="@drawable/bookmark28w" />

        <TextView
            android:id="@+id/webBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:gravity="center"
            android:text="@string/vcs"
            android:textSize="16sp"
            app:drawableTopCompat="@drawable/web28w" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>