<?xml version="1.0" encoding="utf-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".auth.IntroActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_alignParentBottom="true"
                android:layout_margin="10dp"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/loginBtn"
                    android:text="@string/login"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:background="@drawable/background_radius"
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"/>

                <Button
                    android:id="@+id/joinBtn"
                    android:text="@string/join"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:background="@drawable/background_radius"
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"/>

                <Button
                    android:id="@+id/guestBtn"
                    android:text="@string/guest"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:background="@drawable/background_radius"
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"/>

            </LinearLayout>

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>