<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".board.BoardWriteActivity"
    android:orientation="vertical">

    <!-- 앱바 -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main"
        android:padding="10dp">

        <!-- 제목 -->
        <TextView
            android:id="@+id/write"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- 뒤로가기 버튼 -->
        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:contentDescription="@string/back"
            android:src="@drawable/back56sub"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBar">

            <!-- 제목 -->
            <EditText
                android:id="@+id/titleArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:padding="10dp"
                android:background="@color/white"
                android:inputType="text"
                android:hint="@string/boardTitle"
                android:textSize="20sp"
                android:importantForAutofill="no" />

            <!-- 내용 -->
            <EditText
                android:id="@+id/mainArea"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginVertical="5dp"
                android:padding="10dp"
                android:background="@color/white"
                android:gravity="top"
                android:inputType="text"
                android:hint="@string/boardMain"
                android:textSize="20sp"
                android:importantForAutofill="no" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:background="@color/white">

                <!-- 사진 -->
                <ImageView
                    android:id="@+id/imageArea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingTop="20dp"
                    android:contentDescription="@string/picture"
                    android:src="@drawable/camera112" />

            </LinearLayout>

            <!-- 글쓰기 버튼 -->
            <Button
                android:id="@+id/writeBtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginVertical="5dp"
                android:background="@drawable/button_main"
                android:text="@string/write"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>