<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".board.BoardEditActivity">

    <!-- 앱바 -->
    <TextView
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/appbar"
        android:gravity="center"
        android:text="@string/edit"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBar">

            <!-- 제목 -->
            <EditText
                android:id="@+id/titleArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:padding="10dp"
                android:background="@color/white"
                android:inputType="text"
                android:hint="@string/boardTitle"
                android:textSize="20sp"
                android:importantForAutofill="no" />

            <!-- 내용 -->
            <EditText
                android:id="@+id/mainArea"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginVertical="5dp"
                android:padding="10dp"
                android:background="@color/white"
                android:gravity="top"
                android:inputType="text"
                android:hint="@string/boardMain"
                android:textSize="20sp"
                android:importantForAutofill="no" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:background="@color/white">

                <!-- 사진 -->
                <ImageView
                    android:id="@+id/imageArea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingTop="20dp"
                    android:contentDescription="@string/picture"
                    android:src="@drawable/camera112" />

            </LinearLayout>

            <!-- 글쓰기 버튼 -->
            <Button
                android:id="@+id/editBtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginVertical="5dp"
                android:background="@drawable/button_main"
                android:text="@string/edit"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>