<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".board.BoardReadActivity">

    <!-- 제목 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/main"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/titleArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boardTitle"
            android:textSize="20sp"
            android:textColor="@color/white" />

    </LinearLayout>

    <!--시간 -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/box2">

        <TextView
            android:id="@+id/timeArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boardTime"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/boardCount"-->
<!--            android:textSize="16sp"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- 내용 -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/box2">

        <TextView
            android:id="@+id/mainArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/boardMain"
            android:textSize="20sp"
            android:textColor="@color/black" />

    </ScrollView>

</LinearLayout>