<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <!-- 앱바 -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main"
        android:padding="10dp">

        <!-- 제목 -->
        <TextView
            android:id="@+id/myComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myComment"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- 종료 아이콘 -->
        <ImageView
            android:id="@+id/close"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:contentDescription="@string/close"
            android:src="@drawable/close56"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- 수정 -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/commentEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/box1">

        <!-- 아이콘 -->
        <ImageView
            android:id="@+id/editIcon"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/eraser56"
            android:contentDescription="@string/edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- 텍스트 -->
        <TextView
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/edit"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editIcon"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- 삭제 -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/commentDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <!-- 아이콘 -->
        <ImageView
            android:id="@+id/deleteIcon"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/trashcan56"
            android:contentDescription="@string/delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- 텍스트 -->
        <TextView
            android:id="@+id/deleteText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/delete"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/deleteIcon"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>